Refactor layout components, enhance language support in ThreePointChallenge, update drill titles for clarity, and improve video handling in DrillDetailsScreen

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -19,7 +19,7 @@
     "Dribble Fundamentals": "Dribble Fundamentals",
     "Dribble Challenge": "Dribble Challenge",
     "Combos / Moves": "Combos / Moves",
-    "Training Program": "Training Program",
+    "Shooting Drills": "Shooting Drills",
     "Layups Fundamentals": "Layups Fundamentals",
     "Advanced Layups": "Advanced Layups",
     "Counter - Layups": "Counter - Layups",
@@ -97,6 +97,9 @@
     "Dribble the ball behind your back, changing hands each time. Change diagonals every 10 dribbles.": "Dribble the ball behind your back, changing hands each time. Change diagonals every 10 dribbles.",
     "Stay low when dribbling for better ball protection and easier direction changes.": "Stay low when dribbling for better ball protection and easier direction changes.",
     "Wrap Around (no dribble)": "Wrap Around (no dribble)",
+    "Wrap Around (with dribble)": "Wrap Around (with dribble)",
+    "Figure 8 (no dribble)": "Figure 8 (no dribble)",
+    "Figure 8 (with dribble)": "Figure 8 (with dribble)",	
     "10x in each direction": "10x in each direction",
     "Drills": "Drills",
     "Fundamentals": "Fundamentals",
@@ -108,9 +111,30 @@
     "Explore training programs": "Explore training programs",
     "Stats have been reset.": "Stats have been reset.",
     "Stat has been reset.": "Stat has been reset.",
-      "Keep an eye on your progress with simple and motivating indicators.": "Keep an eye on your progress with simple and motivating indicators.",   
-      "Discover a library of exercises and interactive drills suitable for all levels.": "Discover a library of exercises and interactive drills suitable for all levels.",
-      "Track your progress": "Track your progress",
-      "Create personalized programs": "Create personalized programs",
-      "Design custom training sessions according to your goals and schedule.": "Design custom training sessions according to your goals and schedule."
+    "Keep an eye on your progress with simple and motivating indicators.": "Keep an eye on your progress with simple and motivating indicators.",   
+    "Discover a library of exercises and interactive drills suitable for all levels.": "Discover a library of exercises and interactive drills suitable for all levels.",
+    "Track your progress": "Track your progress",
+    "Create personalized programs": "Create personalized programs",
+    "Design custom training sessions according to your goals and schedule.": "Design custom training sessions according to your goals and schedule.",
+    "Here you can change the app settings, such as language, theme, etc.": "Here you can change the app settings, such as language, theme, etc.",
+    "Pound Shots": "Pound Shots",
+    "Improves the transition to shooting.": "Improves the transition to shooting.",
+    "Stand 3-4m from the basket, pound the ball hard with your weak hand before shooting.": "Stand 3-4m from the basket, pound the ball hard with your weak hand before shooting.",
+    "Step 1: Dribble hard.": "Step 1: Dribble hard.",
+    "Step 2: Catch the ball with your weak hand and stuff it into your strong hand.": "Step 2: Catch the ball with your weak hand and stuff it into your strong hand.",
+    "Step 3: Place the ball in your \"shooting pocket\" and shoot.": "Step 3: Place the ball in your \"shooting pocket\" and shoot.",
+    "One Dribble Pull-ups": "One Dribble Pull-ups",
+    "Improves your shot after a dribble.": "Improves your shot after a dribble.",
+    "Dribble towards the basket, take one dribble, then shoot.": "Dribble towards the basket, take one dribble, then shoot.",
+    "Step 1: Work on your footwork: Take one dribble then quickly place one foot then the other.": "Step 1: Work on your footwork: Take one dribble then quickly place one foot then the other.",
+    "Step 2: Pause and stabilize your position before shooting.": "Step 2: Pause and stabilize your position before shooting.",
+    "Step 3: Repeat the movement without stopping to improve your fluidity.": "Step 3: Repeat the movement without stopping to improve your fluidity.",
+    "Step 4: Dribble quickly, pause, dribble again, stop and shoot.": "Step 4: Dribble quickly, pause, dribble again, stop and shoot.",
+    "Form Shots": "Form Shots",
+    "Improves your shooting form.": "Improves your shooting form.",
+    "Shoot the ball with one hand from 5 spots. Add the second hand to guide the shot and take 5 more shots. Step into the shot and take 5 more shots.": "Shoot the ball with one hand from 5 spots. Add the second hand to guide the shot and take 5 more shots. Step into the shot and take 5 more shots.",
+    "Use the guide hand to stabilize the ball.": "Use the guide hand to stabilize the ball.",
+    "Finish your shot on your toes to give it momentum.": "Finish your shot on your toes to give it momentum.",
+    "Keep your hand up after the shot.": "Keep your hand up after the shot.",
+    "Focus on the form, not the result.": "Focus on the form, not the result."
 }
