--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -19,7 +19,7 @@
     "Dribble Fundamentals": "Fundamentos de dribbling",
     "Dribble Challenge": "Desafío de dribbling",
     "Combos / Moves": "Combos / Movimientos",
-    "Training Program": "Programa de entrenamiento",
+    "Shooting Drills": "Ejercicios de tiro",
     "Layups Fundamentals": "Fundamentos de bandejas",
     "Advanced Layups": "Bandejas avanzadas",
     "Counter - Layups": "Contra - Bandejas",
@@ -97,6 +97,9 @@
     "Dribble the ball behind your back, changing hands each time. Change diagonals every 10 dribbles.": "Dribla el balón detrás de tu espalda, cambiando de mano cada vez. Cambia de diagonal cada 10 dribles.",
     "Stay low when dribbling for better ball protection and easier direction changes.": "Mantente bajo al driblar para una mejor protección del balón y cambios de dirección más fáciles.",
     "Wrap Around (no dribble)": "Wrap Around (sin driblar)",
+    "Wrap Around (with dribble)": "Wrap Around (con dribbling)",
+    "Figure 8 (no dribble)": "Figura 8 (sin driblar)",
+    "Figure 8 (with dribble)": "Figura 8 (con dribbling)",
     "10x in each direction": "10x en cada dirección",
     "Drills": "Entrenamientos",
     "Fundamentals": "Fundamentos",
@@ -112,5 +115,27 @@
     "Create personalized programs": "Crea programas personalizados",
     "Design custom training sessions according to your goals and schedule.": "Diseña sesiones de entrenamiento personalizadas según tus objetivos y horario.",
     "Stats have been reset.": "Las estadísticas han sido restablecidas.",
-    "Stat has been reset.": "La estadística ha sido restablecida."
-  }
+    "Stat has been reset.": "La estadística ha sido restablecida.",
+    "Here you can change the app settings, such as language, theme, etc.": "Aquí puedes cambiar la configuración de la aplicación, como el idioma, el tema, etc.",
+    "Score as many 3-pointers as possible in one minute.": "Marca tantos triples como sea posible en un minuto.",
+    "seconds remaining": "segundos restantes",
+    "Ready?": "¿Listo?",
+    "Pound Shots": "Tiros después de driblar fuerte",
+    "Improves the transition to shooting.": "Mejora la transición al tiro.",
+    "Stand 3-4m from the basket, pound the ball hard with your weak hand before shooting.": "Párate a 3-4m del aro, dribla fuerte con tu mano débil antes de tirar.",
+    "Step 1: Dribble hard.": "Paso 1: Dribla fuerte.",
+    "Step 2: Catch the ball with your weak hand and stuff it into your strong hand.": "Paso 2: Atrapa la pelota con tu mano débil y pásala a tu mano fuerte.",
+    "Step 3: Place the ball in your \"shooting pocket\" and shoot.": "Paso 3: Coloca la pelota en tu \"bolsillo de tiro\" y tira.",
+    "One Dribble Pull-ups": "Tiros después de un drible",
+    "Improves your shot after a dribble.": "Mejora tu tiro después de un drible.",
+    "Dribble towards the basket, take one dribble, then shoot.": "Dribla hacia el aro, haz un drible y luego tira.",
+    "Step 1: Work on your footwork: Take one dribble then quickly place one foot then the other.": "Paso 1: Trabaja en tu juego de pies: Haz un drible y luego coloca rápidamente un pie y luego el otro.",
+    "Step 2: Pause and stabilize your position before shooting.": "Paso 2: Pausa y estabiliza tu posición antes de tirar.",
+    "Step 3: Repeat the movement without stopping to improve your fluidity.": "Paso 3: Repite el movimiento sin detenerte para mejorar tu fluidez.",
+    "Step 4: Dribble quickly, pause, dribble again, stop and shoot.": "Paso 4: Dribla rápidamente, pausa, dribla de nuevo, detente y tira.",
+    "Form Shots": "Tiros de Forma",
+    "Improves your shooting form.": "Mejora tu forma de tiro.",
+    "Shoot the ball with one hand from 5 spots. Add the second hand to guide the shot and take 5 more shots. Step into the shot and take 5 more shots.": "Lanza la pelota con una mano desde 5 lugares. Añade la segunda mano para guiar el tiro y haz 5 tiros más. Entra en el tiro y haz 5 tiros más.",
+    "Use the guide hand to stabilize the ball.": "Usa la mano guía para estabilizar la pelota.",
+    "Finish your shot on your toes to give it momentum.": "Termina tu tiro en las puntas"
+}
