--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -19,7 +19,7 @@
     "Dribble Fundamentals": "Fondamentaux de Dribble",
     "Dribble Challenge": "Dribble Challenge",
     "Combos / Moves": "Combos / Moves",
-    "Training Program": "Programme d'entrainement",
+    "Shooting Drills": "Exercices de Tir",
     "Layups Fundamentals": "Fondamentaux des Layups",
     "Advanced Layups": "Layups Avancées",
     "Counter - Layups": "Counter - Layups",
@@ -97,7 +97,30 @@
     "Dribble the ball behind your back, changing hands each time. Change diagonals every 10 dribbles.": "Dribblez la balle derrière votre dos, en changeant de main à chaque fois. Changez de diagonale tous les 10 dribbles.",
     "Stay low when dribbling for better ball protection and easier direction changes.": "Restez bas en dribblant pour une meilleure protection de la balle et des changements de direction plus faciles.",
     "Wrap Around (no dribble)": "Wrap Around (sans dribble)",
+    "Wrap Around (with dribble)": "Wrap Around (avec dribble)",
+    "Figure 8 (no dribble)": "Figure 8 (sans dribble)",
+    "Figure 8 (with dribble)": "Figure 8 (avec dribble)",
     "10x in each direction": "10x dans chaque direction",
+    "Pound Shots": "Tirs après dribble fort",
+    "Improves the transition to shooting.": "Améliore la transition vers le tir.",
+    "Stand 3-4m from the basket, pound the ball hard with your weak hand before shooting.": "Placez-vous à 3-4m du panier, dribblez fort avec votre main faible avant de tirer.",
+    "Step 1: Dribble hard.": "Étape 1 : Dribblez fort.",
+    "Step 2: Catch the ball with your weak hand and stuff if into your strong hand.": "Étape 2 : Attrapez la balle avec votre main faible et placez-la dans votre main forte.",
+    "Step 3: Place the ball in your \"shooting pocket\" and shoot.": "Étape 3 : Placez la balle dans votre \"poche de tir\" et tirez.",
+    "One Dribble Pull-ups": "Tirs après un dribble",
+    "Improves your shot after a dribble.": "Améliore votre tir après un dribble.",
+    "Dribble towards the basket, take one dribble, then shoot.": "Dribblez vers le panier, faites un dribble, puis tirez.",
+    "Step 1: Work on your footwork: Take one dribble then quickly place one foot then the other.": "Étape 1 : Travaillez votre jeu de jambes : Faites un dribble puis placez rapidement un pied puis l'autre.",
+    "Step 2: Pause and stabilize your position before shooting.": "Étape 2 : Faites une pause et stabilisez votre position avant de tirer.",
+    "Step 3: Repeat the movement without stopping to improve your fluidity.": "Étape 3 : Répétez le mouvement sans vous arrêter pour améliorer votre fluidité.",
+    "Step 4: Dribble quickly, pause, dribble again, stop and shoot.": "Étape 4 : Dribblez rapidement, faites une pause, dribblez à nouveau, arrêtez-vous et tirez.",
+    "Form Shots": "Tirs de Forme",
+    "Improves your shooting form.": "Améliore votre geste de tir.",
+    "Shoot the ball with one hand from 5 spots. Add the second hand to guide the shot and take 5 more shots. Step into the shot and take 5 more shots.": "Tirez la balle avec une main depuis 5 spots. Ajoutez la deuxième main pour guider le tir et prenez 5 autres tirs. Entrez dans le tir et prenez 5 autres tirs.",
+    "Use the guide hand to stabilize the ball.": "Utilisez la main guide pour stabiliser la balle.",
+    "Finish your shot on your toes to give it momentum.": "Finissez votre tir sur la pointe des pieds pour lui donner de l'élan.",
+    "Keep your hand up after the shot.": "Gardez votre main en l'air après le tir.",
+    "Focus on the form, not the result.": "Concentrez-vous sur le geste, pas sur le résultat.",
     "Drills": "Entrainements",
     "Fundamentals": "Fondamentaux",
     "5 min - 5 exercises": "5 min - 5 exercices",
@@ -112,5 +135,9 @@
     "Create personalized programs": "Créez des programmes personnalisés",
     "Design custom training sessions according to your goals and schedule."   : "Concevez des séances d'entraînement personnalisées en fonction de vos objectifs et de votre emploi du temps.",   
     "Stats have been reset.": "Les statistiques ont été réinitialisées.",
-    "Stat has been reset.": "Statistique réinitialisée."
-  }
+    "Stat has been reset.": "Statistique réinitialisée.",
+    "Here you can change the app settings, such as language, theme, etc." : "Ici, vous pouvez modifier les paramètres de l'application, tels que la langue, le thème, etc.",
+    "Score as many 3-pointers as possible in one minute.": "Marquez autant de 3 points que possible en 1 minute.",
+    "seconds remaining": "secondes restantes",
+    "Ready?": "Prêt?"
+}
