Refactor navigation types, enhance drill filtering in DribblingFundamentalsDrills, and remove LayupsFundamentalsDrills component

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -65,7 +65,7 @@
     "Start": "Start",
     "exercises": "exercises",
     "No video available": "No video available",
-    "Instructions": "Instructions",
+    "Instructions": "Description",
     "Objective": "Objective",
     "Tips": "Tips",
     "No tips available": "No tips available",
@@ -75,12 +75,6 @@
     "Keep your back straight and knees slightly bent.": "Keep your back straight and knees slightly bent.",
     "Use your fingers to control the ball, not your palm.": "Use your fingers to control the ball, not your palm.",
     "Look straight ahead, not at the ball.": "Look straight ahead, not at the ball.",
-    "Crossover": "Crossover",
-    "Improves your ability to change direction quickly.": "Improves your ability to change direction quickly.",
-    "Dribble the ball from one hand to the other in front of your body. Change diagonals every 10 dribbles.": "Dribble the ball from one hand to the other in front of your body. Change diagonals every 10 dribbles.",
-    "Keep your center of gravity low for better balance.": "Keep your center of gravity low for better balance.",
-    "Use a quick and smooth motion for the crossover.": "Use a quick and smooth motion for the crossover.",
-    "Dribble higher or lower to change the rhythm.": "Dribble higher or lower to change the rhythm.",
     "Front/Back Dribble": "Front/Back Dribble",
     "Improves ball control under defensive pressure.": "Improves ball control under defensive pressure.",
     "Stand in front of a line. Dribble the ball once in front of the line, then once behind the line. Change hands every 10 dribbles.": "Stand in front of a line. Dribble the ball once in front of the line, then once behind the line. Change hands every 10 dribbles.",
@@ -94,12 +88,31 @@
     "Use a quick and smooth motion to pass the ball between your legs.": "Use a quick and smooth motion to pass the ball between your legs.",
     "Focus on ball control to avoid turnovers, not speed.": "Focus on ball control to avoid turnovers, not speed.",
     "Behind the Back": "Behind the Back",
+    "Improves your ability to protect the ball from defenders and change direction.": "Improves your ability to protect the ball from defenders and change direction.",
     "Dribble the ball behind your back, changing hands each time. Change diagonals every 10 dribbles.": "Dribble the ball behind your back, changing hands each time. Change diagonals every 10 dribbles.",
+    "Keep your back straight and knees slightly bent.": "Keep your back straight and knees slightly bent.",
+    "Use a quick and smooth motion to pass the ball behind your back.": "Use a quick and smooth motion to pass the ball behind your back.",
     "Stay low when dribbling for better ball protection and easier direction changes.": "Stay low when dribbling for better ball protection and easier direction changes.",
     "Wrap Around (no dribble)": "Wrap Around (no dribble)",
-    "Wrap Around (with dribble)": "Wrap Around (with dribble)",
+    "Improves your ability to perform behind-the-back dribbles quickly.": "Improves your ability to perform behind-the-back dribbles quickly.",
+    "Pass the ball around your legs as quickly as possible.": "Pass the ball around your legs as quickly as possible.",
+    "If you struggle to dribble around your legs, start at the waist and progress to the legs.": "If you struggle to dribble around your legs, start at the waist and progress to the legs.",
+    "Try to keep the ball as close to your body as possible.": "Try to keep the ball as close to your body as possible.",
+    "Maintain a steady rhythm to improve your coordination and control.": "Maintain a steady rhythm to improve your coordination and control.",
     "Figure 8 (no dribble)": "Figure 8 (no dribble)",
-    "Figure 8 (with dribble)": "Figure 8 (with dribble)",	
+    "Improves your ability to perform behind-the-back dribbles quickly.": "Improves your ability to perform behind-the-back dribbles quickly.",
+    "Dribble the ball in a figure 8 between your legs.": "Dribble the ball in a figure 8 between your legs.",
+    "Keep your knees bent to facilitate the movement.": "Keep your knees bent to facilitate the movement.",
+    "Use a quick and smooth motion to dribble in a figure 8.": "Use a quick and smooth motion to dribble in a figure 8.",
+    "Focus on ball control to avoid turnovers.": "Focus on ball control to avoid turnovers.",
+    "Wrap Around (with dribble)": "Wrap Around (with dribble)",
+    "Improves your ability to dribble around your body.": "Improves your ability to dribble around your body.",
+    "Dribble the ball around your waist, changing hands each turn. Change direction every 10 dribbles.": "Dribble the ball around your waist, changing hands each turn. Change direction every 10 dribbles.",
+    "Keep your knees slightly bent to facilitate the movement.": "Keep your knees slightly bent to facilitate the movement.",
+    "Use a quick and smooth motion to dribble around your waist.": "Use a quick and smooth motion to dribble around your waist.",
+    "Figure 8 (with dribble)": "Figure 8 (with dribble)",
+    "Improves your ability to dribble between your legs in a figure 8.": "Improves your ability to dribble between your legs in a figure 8.",
+    "Dribble the ball in a figure 8 between your legs. Change direction every 10 dribbles.": "Dribble the ball in a figure 8 between your legs. Change direction every 10 dribbles.",
     "10x in each direction": "10x in each direction",
     "Drills": "Drills",
     "Fundamentals": "Fundamentals",
@@ -136,5 +149,6 @@
     "Use the guide hand to stabilize the ball.": "Use the guide hand to stabilize the ball.",
     "Finish your shot on your toes to give it momentum.": "Finish your shot on your toes to give it momentum.",
     "Keep your hand up after the shot.": "Keep your hand up after the shot.",
-    "Focus on the form, not the result.": "Focus on the form, not the result."
+    "Focus on the form, not the result.": "Focus on the form, not the result.",
+    "Click on the CC button in the video player to enable captions" : "Click on the CC button in the video player to enable captions" 
 }
