--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -65,7 +65,7 @@
     "Start": "Comenzar",
     "exercises": "ejercicios",
     "No video available": "No hay video disponible",
-    "Instructions": "Instrucciones",
+    "Instructions": "Descripción",
     "Objective": "Objetivo",
     "Tips": "Consejos",
     "No tips available": "No hay consejos disponibles",
@@ -75,12 +75,6 @@
     "Keep your back straight and knees slightly bent.": "Mantén la espalda recta y las rodillas ligeramente dobladas.",
     "Use your fingers to control the ball, not your palm.": "Usa tus dedos para controlar el balón, no la palma de tu mano.",
     "Look straight ahead, not at the ball.": "Mira hacia adelante, no al balón.",
-    "Crossover": "Dribbling cruzado",
-    "Improves your ability to change direction quickly.": "Mejora tu capacidad para cambiar de dirección rápidamente.",
-    "Dribble the ball from one hand to the other in front of your body. Change diagonals every 10 dribbles.": "Dribla el balón de una mano a la otra frente a tu cuerpo. Cambia de diagonal cada 10 dribles.",
-    "Keep your center of gravity low for better balance.": "Mantén tu centro de gravedad bajo para un mejor equilibrio.",
-    "Use a quick and smooth motion for the crossover.": "Usa un movimiento rápido y suave para el dribbling cruzado.",
-    "Dribble higher or lower to change the rhythm.": "Dribla más alto o más bajo para cambiar el ritmo.",
     "Front/Back Dribble": "Dribbling adelante/atrás",
     "Improves ball control under defensive pressure.": "Mejora el control del balón bajo presión defensiva.",
     "Stand in front of a line. Dribble the ball once in front of the line, then once behind the line. Change hands every 10 dribbles.": "Párate frente a una línea. Dribla el balón una vez frente a la línea, luego una vez detrás de la línea. Cambia de mano cada 10 dribles.",
@@ -94,9 +88,14 @@
     "Use a quick and smooth motion to pass the ball between your legs.": "Usa un movimiento rápido y suave para pasar el balón entre tus piernas.",
     "Focus on ball control to avoid turnovers, not speed.": "Concéntrate en el control del balón para evitar pérdidas, no en la velocidad.",
     "Behind the Back": "Detrás de la espalda",
+    "Improves your ability to protect the ball from defenders and change direction.": "Mejora tu capacidad para proteger el balón de los defensores y cambiar de dirección.",
     "Dribble the ball behind your back, changing hands each time. Change diagonals every 10 dribbles.": "Dribla el balón detrás de tu espalda, cambiando de mano cada vez. Cambia de diagonal cada 10 dribles.",
+    "Keep your back straight and knees slightly bent.": "Mantén la espalda recta y las rodillas ligeramente dobladas.",
+    "Use a quick and smooth motion to pass the ball behind your back.": "Usa un movimiento rápido y suave para pasar el balón detrás de tu espalda.",
     "Stay low when dribbling for better ball protection and easier direction changes.": "Mantente bajo al driblar para una mejor protección del balón y cambios de dirección más fáciles.",
     "Wrap Around (no dribble)": "Wrap Around (sin driblar)",
+    "Improves your ability to perform behind-the-back dribbles quickly.": "Mejora tu capacidad para realizar dribbles detrás de la espalda rápidamente.",
+    "Pass the ball around your legs as quickly as possible.": "Pasa el balón alrededor de tus piernas lo más rápido posible.",
     "Wrap Around (with dribble)": "Wrap Around (con dribbling)",
     "Figure 8 (no dribble)": "Figura 8 (sin driblar)",
     "Figure 8 (with dribble)": "Figura 8 (con dribbling)",
@@ -137,5 +136,7 @@
     "Improves your shooting form.": "Mejora tu forma de tiro.",
     "Shoot the ball with one hand from 5 spots. Add the second hand to guide the shot and take 5 more shots. Step into the shot and take 5 more shots.": "Lanza la pelota con una mano desde 5 lugares. Añade la segunda mano para guiar el tiro y haz 5 tiros más. Entra en el tiro y haz 5 tiros más.",
     "Use the guide hand to stabilize the ball.": "Usa la mano guía para estabilizar la pelota.",
-    "Finish your shot on your toes to give it momentum.": "Termina tu tiro en las puntas"
+    "Finish your shot on your toes to give it momentum.": "Termina tu tiro en las puntas",
+    "Click on the CC button in the video player to enable captions.": "Haz clic en el botón en el reproductor de video para activar los subtítulos.",
+    "List of all drills": "Lista de todos los ejercicios"
 }
