--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -65,7 +65,7 @@
     "Start": "Commencer",
     "exercises": "exercices",
     "No video available": "Pas de vidéo disponible",
-    "Instructions": "Instruction",
+    "Instructions": "Description",
     "Objective": "Objectif",
     "Tips": "Conseils",
     "No tips available": "Pas de conseils disponibles",
@@ -75,12 +75,6 @@
     "Keep your back straight and knees slightly bent.": "Gardez le dos droit et les genoux légèrement fléchis.",
     "Use your fingers to control the ball, not your palm.": "Utilisez vos doigts pour contrôler la balle, pas votre paume.",
     "Look straight ahead, not at the ball.": "Regardez droit devant vous, pas la balle.",
-    "Crossover": "Dribble croisé",
-    "Improves your ability to change direction quickly.": "Améliore votre capacité à changer de direction rapidement.",
-    "Dribble the ball from one hand to the other in front of your body. Change diagonals every 10 dribbles.": "Dribblez la balle d'une main à l'autre devant votre corps. Changez de diagonale tous les 10 dribbles.",
-    "Keep your center of gravity low for better balance.": "Gardez votre centre de gravité bas pour un meilleur équilibre.",
-    "Use a quick and smooth motion for the crossover.": "Utilisez un mouvement rapide et fluide pour le dribble croisé.",
-    "Dribble higher or lower to change the rhythm.": "Dribblez plus haut ou plus bas pour changer le rythme.",
     "Front/Back Dribble": "Dribble avant/arrière",
     "Improves ball control under defensive pressure.": "Améliore le contrôle de la balle sous pression défensive.",
     "Stand in front of a line. Dribble the ball once in front of the line, then once behind the line. Change hands every 10 dribbles.": "Tenez-vous devant une ligne. Dribblez la balle une fois devant la ligne, puis une fois derrière la ligne. Changez de main tous les 10 dribbles.",
@@ -94,13 +88,31 @@
     "Use a quick and smooth motion to pass the ball between your legs.": "Utilisez un mouvement rapide et fluide pour passer la balle entre vos jambes.",
     "Focus on ball control to avoid turnovers, not speed.": "Concentrez-vous sur le contrôle de la balle pour éviter les pertes de balle, pas sur la vitesse.",
     "Behind the Back": "Derrière le dos",
+    "Improves your ability to protect the ball from defenders and change direction.": "Améliore votre capacité à protéger la balle des défenseurs et à changer de direction.",
     "Dribble the ball behind your back, changing hands each time. Change diagonals every 10 dribbles.": "Dribblez la balle derrière votre dos, en changeant de main à chaque fois. Changez de diagonale tous les 10 dribbles.",
+    "Keep your back straight and knees slightly bent.": "Gardez le dos droit et les genoux légèrement fléchis.",
+    "Use a quick and smooth motion to pass the ball behind your back.": "Utilisez un mouvement rapide et fluide pour passer la balle derrière votre dos.",
     "Stay low when dribbling for better ball protection and easier direction changes.": "Restez bas en dribblant pour une meilleure protection de la balle et des changements de direction plus faciles.",
     "Wrap Around (no dribble)": "Wrap Around (sans dribble)",
-    "Wrap Around (with dribble)": "Wrap Around (avec dribble)",
+    "Improves your ability to perform behind-the-back dribbles quickly.": "Améliore votre capacité à effectuer des dribbles derrière le dos rapidement.",
+    "Pass the ball around your legs as quickly as possible.": "Passez la balle autour de vos jambes aussi vite que possible.",
+    "If you struggle to dribble around your legs, start at the waist and progress to the legs.": "Si vous avez du mal à dribbler autour de vos jambes, commencez à la taille et progressez vers les jambes.",
+    "Try to keep the ball as close to your body as possible.": "Essayez de garder la balle aussi près de votre corps que possible.",
+    "Maintain a steady rhythm to improve your coordination and control.": "Maintenez un rythme régulier pour améliorer votre coordination et votre contrôle.",
     "Figure 8 (no dribble)": "Figure 8 (sans dribble)",
+    "Improves your ability to perform behind-the-back dribbles quickly.": "Améliore votre capacité à effectuer des dribbles derrière le dos rapidement.",
+    "Dribble the ball in a figure 8 between your legs.": "Dribblez la balle en forme de 8 entre vos jambes.",
+    "Keep your knees bent to facilitate the movement.": "Gardez les genoux fléchis pour faciliter le mouvement.",
+    "Use a quick and smooth motion to dribble in a figure 8.": "Utilisez un mouvement rapide et fluide pour dribbler en forme de 8.",
+    "Focus on ball control to avoid turnovers.": "Concentrez-vous sur le contrôle de la balle pour éviter les pertes de balle.",
+    "Wrap Around (with dribble)": "Wrap Around (avec dribble)",
+    "Improves your ability to dribble around your body.": "Améliore votre capacité à dribbler autour de votre corps.",
+    "Dribble the ball around your waist, changing hands each turn. Change direction every 10 dribbles.": "Dribblez la balle autour de votre taille, en changeant de main à chaque tour. Changez de direction tous les 10 dribbles.",
+    "Keep your knees slightly bent to facilitate the movement.": "Gardez les genoux légèrement fléchis pour faciliter le mouvement.",
+    "Use a quick and smooth motion to dribble around your waist.": "Utilisez un mouvement rapide et fluide pour dribbler autour de votre taille.",
     "Figure 8 (with dribble)": "Figure 8 (avec dribble)",
-    "10x in each direction": "10x dans chaque direction",
+    "Improves your ability to dribble between your legs in a figure 8.": "Améliore votre capacité à dribbler entre vos jambes en forme de 8.",
+    "Dribble the ball in a figure 8 between your legs. Change direction every 10 dribbles.": "Dribblez la balle en forme de 8 entre vos jambes. Changez de direction tous les 10 dribbles.",
     "Pound Shots": "Tirs après dribble fort",
     "Improves the transition to shooting.": "Améliore la transition vers le tir.",
     "Stand 3-4m from the basket, pound the ball hard with your weak hand before shooting.": "Placez-vous à 3-4m du panier, dribblez fort avec votre main faible avant de tirer.",
@@ -139,5 +151,7 @@
     "Here you can change the app settings, such as language, theme, etc." : "Ici, vous pouvez modifier les paramètres de l'application, tels que la langue, le thème, etc.",
     "Score as many 3-pointers as possible in one minute.": "Marquez autant de 3 points que possible en 1 minute.",
     "seconds remaining": "secondes restantes",
-    "Ready?": "Prêt?"
+    "Ready?": "Prêt?",
+    "Click on the CC button in the video player to enable captions": "Cliquez sur le bouton dans le lecteur vidéo pour activer les sous-titres",
+    "List of all drills": "Liste de tous les exercices"
 }
