Add tags to Drill interface, updated a few drills

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -115,6 +115,7 @@
     "Dribble the ball in a figure 8 between your legs. Change direction every 10 dribbles.": "Dribble the ball in a figure 8 between your legs. Change direction every 10 dribbles.",
     "10x in each direction": "10x in each direction",
     "Drills": "Drills",
+    "All drills": "All drills",
     "Fundamentals": "Fundamentals",
     "5 min - 5 exercises": "5 min - 5 exercises",
     "Coming soon!": "Coming soon!",
@@ -150,5 +151,8 @@
     "Finish your shot on your toes to give it momentum.": "Finish your shot on your toes to give it momentum.",
     "Keep your hand up after the shot.": "Keep your hand up after the shot.",
     "Focus on the form, not the result.": "Focus on the form, not the result.",
-    "Click on the CC button in the video player to enable captions" : "Click on the CC button in the video player to enable captions" 
+    "Click on the CC button in the video player to enable captions" : "Click on the CC button in the video player to enable captions",
+    "Warming up without a Ball": "Warming up without a Ball",
+    "Dribble routine": "Routine de dribble",
+    "Killer Crossover": "Killer Crossover"
 }
