--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -28,6 +28,7 @@
     "minutes": "minutes",
     "seconds": "secondes",
     "exercises": "exercices",
+    "All drills": "Tous les exercices / tutos",
     "Select a workout:": "Sélectionnez un entraînement:",
     "Progress saved successfully.": "Progression sauvegardée avec succès.",
     "Failed to save progress.": "Échec de la sauvegarde de la progression.",
@@ -113,20 +114,18 @@
     "Figure 8 (with dribble)": "Figure 8 (avec dribble)",
     "Improves your ability to dribble between your legs in a figure 8.": "Améliore votre capacité à dribbler entre vos jambes en forme de 8.",
     "Dribble the ball in a figure 8 between your legs. Change direction every 10 dribbles.": "Dribblez la balle en forme de 8 entre vos jambes. Changez de direction tous les 10 dribbles.",
-    "Pound Shots": "Tirs après dribble fort",
+    "Pound Shots": "Tirs après dribble",
     "Improves the transition to shooting.": "Améliore la transition vers le tir.",
     "Stand 3-4m from the basket, pound the ball hard with your weak hand before shooting.": "Placez-vous à 3-4m du panier, dribblez fort avec votre main faible avant de tirer.",
     "Step 1: Dribble hard.": "Étape 1 : Dribblez fort.",
     "Step 2: Catch the ball with your weak hand and stuff if into your strong hand.": "Étape 2 : Attrapez la balle avec votre main faible et placez-la dans votre main forte.",
     "Step 3: Place the ball in your \"shooting pocket\" and shoot.": "Étape 3 : Placez la balle dans votre \"poche de tir\" et tirez.",
-    "One Dribble Pull-ups": "Tirs après un dribble",
     "Improves your shot after a dribble.": "Améliore votre tir après un dribble.",
     "Dribble towards the basket, take one dribble, then shoot.": "Dribblez vers le panier, faites un dribble, puis tirez.",
     "Step 1: Work on your footwork: Take one dribble then quickly place one foot then the other.": "Étape 1 : Travaillez votre jeu de jambes : Faites un dribble puis placez rapidement un pied puis l'autre.",
     "Step 2: Pause and stabilize your position before shooting.": "Étape 2 : Faites une pause et stabilisez votre position avant de tirer.",
     "Step 3: Repeat the movement without stopping to improve your fluidity.": "Étape 3 : Répétez le mouvement sans vous arrêter pour améliorer votre fluidité.",
     "Step 4: Dribble quickly, pause, dribble again, stop and shoot.": "Étape 4 : Dribblez rapidement, faites une pause, dribblez à nouveau, arrêtez-vous et tirez.",
-    "Form Shots": "Tirs de Forme",
     "Improves your shooting form.": "Améliore votre geste de tir.",
     "Shoot the ball with one hand from 5 spots. Add the second hand to guide the shot and take 5 more shots. Step into the shot and take 5 more shots.": "Tirez la balle avec une main depuis 5 spots. Ajoutez la deuxième main pour guider le tir et prenez 5 autres tirs. Entrez dans le tir et prenez 5 autres tirs.",
     "Use the guide hand to stabilize the ball.": "Utilisez la main guide pour stabiliser la balle.",
@@ -153,5 +152,12 @@
     "seconds remaining": "secondes restantes",
     "Ready?": "Prêt?",
     "Click on the CC button in the video player to enable captions": "Cliquez sur le bouton dans le lecteur vidéo pour activer les sous-titres",
-    "List of all drills": "Liste de tous les exercices"
+    "List of all drills": "Liste de tous les exercices",
+    "Warming up without a Ball": "Échauffement sans ballon",
+    "5 minute dribble routine": "Routine de dribble de 5 minutes",
+    "Layups": "Double pas",
+    "Curry's Fast Shot release": "Tir rapide de Curry",
+    "Defensive Stance drill": "Exercice de posture défensive",
+    "Behind the back pass": "Passe derrière le dos",
+    "Find YOUR shooting pocket": "Trouvez VOTRE poche de tir"
 }
