Enhance Drill interface with timestamps and workout steps, and refactor DribblingFundamentalsDrills to AllDrills component for better drill filtering.

--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -120,6 +120,7 @@
     "Score as many 3-pointers as possible in one minute.": "Marca tantos triples como sea posible en un minuto.",
     "seconds remaining": "segundos restantes",
     "Ready?": "¿Listo?",
+    "Done": "Hecho",
     "Pound Shots": "Tiros después de driblar fuerte",
     "Improves the transition to shooting.": "Mejora la transición al tiro.",
     "Stand 3-4m from the basket, pound the ball hard with your weak hand before shooting.": "Párate a 3-4m del aro, dribla fuerte con tu mano débil antes de tirar.",
