--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -28,6 +28,7 @@
     "minutes": "minutes",
     "seconds": "secondes",
     "exercises": "exercices",
+    "Done": "Terminé",
     "All drills": "Tous les exercices / tutos",
     "Select a workout:": "Sélectionnez un entraînement:",
     "Progress saved successfully.": "Progression sauvegardée avec succès.",
